--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <div class="container">
         <div id="head">
             <h1>OurStore</h1>
-            <img src="./icons8-cart.gif" alt="">
+            <img onclick="showCart()" src="./icons8-cart.gif" alt="">
             <img src="./icons8-user-60.png" alt="">
+            <button id="order">make an order <br><span id="sum"></span></button>
             
             <button onclick="createCategoriesDiv()" id="home">HOME</button>
         </div>
